# fastapi-depends

./: LICENSE  README.md  pyproject.toml
examples/: __main__.py  test_dep_container.py  test_dep_key.py  test_simple.py
fastapi_depends/: __init__.py  core.py  dep_container.py  fake_request.py  simple.py
