[tool.poetry]
name = "fastapi-depends"
version = "0.2.1"
description = "Use your FastAPI dependencies in plain python code"
authors = ["troyan-dy"]
repository = "https://github.com/troyan-dy/fastapi-depends"
homepage = "https://github.com/troyan-dy/fastapi-depends"
documentation = "https://github.com/troyan-dy/fastapi-depends#readme"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.910"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
